@@ -1,4 +1,4 @@
-README for 0.10.0 cvBlob.
+README for 0.10.1 cvBlob.
 
 
 1. DOWNLOAD LATEST SOURCE
