@@ -2,7 +2,10 @@ Version 0.10.1 (2010/04/19)
 
   * cvcontour.cpp: "cvWriteContourPolygonCSV" function.
 
-  * cvblob.h: Fixed memory leak in "cvReleaseBlobs".
+  * cvblob.h: new function cvReleaseBlob. Fixed memory leak in
+  "cvReleaseBlobs".
+  
+  * cvblob.cpp: Fixed memory leak in "cvFilterByArea".
 
 Version 0.10.0 (2010/03/18)
 
